# Blue-Environment

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.hl  build.rb  index.html  install.hl  package.json  tsconfig.json  vite.config.ts
BEDM/: Makefile  install.hl  install.sh
BEDM/bedm-daemon/: Cargo.toml
BEDM/bedm-daemon/src/: ipc.rs  main.rs  pam_auth.rs  users.rs
BEDM/bedm-greeter/: package.json  tauri.conf.json
BEDM/bedm-greeter/src/: ipc_client.rs  main.rs
BEDM/bedm-ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
BEDM/bedm-ui/src/: App.svelte
BEDM/bedm-ui/src/components/: PowerMenu.tsx  SessionPicker.tsx
BEDM/bedm-ui/src/lib/: types.ts
BEDM/bedm-ui/src/lib/components/: Clock.svelte  PatternLock.svelte  SessionPicker.svelte  UserCard.svelte
BEDM/bedm-ui/src/lib/utils/: tauri.ts
BEDM/daemon/: Cargo.toml
BEDM/daemon/src/: pam_auth.rs  session.rs  users.rs  vt.rs
BEDM/greeter/: Cargo.toml  tauri.conf.json
BEDM/greeter/src/: ipc_client.rs  main.rs
BEDM/packaging/: bedm.spec
BEDM/ui/: package.json  tailwind.config.js  tsconfig.json
BEDM/ui/src/: App.tsx  main.tsx
BEDM/ui/src/components/: PowerMenu.tsx  UserCard.tsx
BEDM/ui/src/utils/: tauri.rs
auth/src/: lib.rs
compositor/: Cargo.toml
compositor/src/: ipc.rs  main.rs  render.rs
compositor/src/ipc/: handler.rs
compositor/src/protocols/: decoration.rs  idle.rs  mod.rs  session_lock.rs
compositor/src/state/: mod.rs
config/: Blue-Environment.desktop  list.hacker  version.json
config/BEDM/: bedm.toml  pam-bedm
config/examples/BEDM-config/: bedm.hk
launcher/: main.rb  shard.yml  version.hacker
launcher/src/: main.cr  network.rb
packaging/: blue-environment-legendaryos.spec
packaging/blue-environment-debian/: control  postinst  rules
src/: App.svelte  App.tsx  constants.tsx  index.css  index.html  index.tsx  tsconfig.json  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/lib/blue-compositor/: Cargo.toml
src-tauri/lib/blue-compositor/src/: input.rs  ipc.rs  main.rs  protocols.rs  render.rs  state.rs  xwayland.rs
src-tauri/src/: apps.rs  cache.rs  icon_resolver.rs  lib.rs  main.rs  packages.rs  session.rs
src-tauri/src/BlueCodeApp/: mod.rs
src-tauri/src/BlueDocs/: mod.rs
src-tauri/src/BlueInstallerApp/: mod.rs
src-tauri/src/BluePartitionManager/: mod.rs
src-tauri/src/BlueScreenshot/: mod.rs
src-tauri/src/CameraApp/: mod.rs
src-tauri/src/SettingsApp/: mod.rs
src-tauri/src/SystemMonitorApp/: mod.rs
src-tauri/src/TerminalApp/: mod.rs
src-tauri/src/commands/: ai.rs  config.rs  display.rs  misc.rs  mod.rs  packages.rs  system_stats.rs
src/components/: ControlCenter.tsx  ErrorBoundary.tsx  GitPanel.tsx  PowerMenu.tsx  SettingsSections.tsx  StartMenu.tsx  TopBar.tsx  Window.tsx
src/components/apps/: AboutApp.tsx  BlueArchiveApp.tsx  BlueWebApp.tsx  CameraApp.tsx  ExplorerApp.tsx  NotepadApp.tsx  SettingsApp.tsx  SystemMonitorApp.tsx  TerminalApp.tsx
src/components/apps/Blue-AI/: main.tsx
src/components/apps/Blue-AI/src/: types.ts
src/components/apps/Blue-Archive-App/: main.tsx
src/components/apps/Blue-Archive-App/src/: useArchive.ts
src/components/apps/Blue-Code-App/: main.tsx
src/components/apps/Blue-Code-App/src/: CommandPalette.tsx  DevServerPanel.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPane.tsx  useSearch.ts
src/components/apps/Blue-Images-App/: main.tsx
src/components/apps/Blue-Images-App/src/: useImages.ts
src/components/apps/Blue-Screenshot/: SettingsPanel.tsx  types.ts
src/components/apps/Blue-Software-App/: main.tsx
src/components/apps/Blue-Software-App/src/: PackageRow.tsx  usePackages.ts
src/components/apps/Blue-Video-App/: main.tsx
src/components/apps/Blue-Video-App/src/: Controls.tsx  usePlaylist.ts
src/components/apps/Blue-Web-App/src/: SidePanel.tsx  types.ts  useHistory.ts
src/components/apps/Explorer-App/: main.tsx
src/components/apps/Mail-App/: EmailViewer.tsx  MailSidebar.tsx  demoData.ts  main.tsx  types.ts
src/components/apps/Settings-App/: TabButton.tsx  main.tsx
src/components/apps/Settings-App/sections/: AboutSection.tsx  AccountsSection.tsx  BluetoothSection.tsx  NightLightSection.tsx  PersonalizationSection.tsx
src/components/apps/System-Monitor-App/: main.tsx
src/components/apps/System-Monitor-App/src/: Sparkline.tsx  types.ts
src/components/apps/Terminal-App/: main.tsx  tauriBridge.ts  themes.ts  useTerminalSession.ts
src/contexts/: DialogContext.tsx  LanguageContext.tsx
src/contexts/translations/: english.tsx
src/lib/: constants.ts
src/lib/components/: ControlCenter.svelte  NotificationCenter.svelte  PowerMenu.svelte  TopBar.svelte  Window.svelte  WorkspaceSwitcher.svelte
src/lib/components/apps/: AboutApp.svelte  SaveAsDialog.svelte
src/lib/components/apps/Blue-Archive-App/: BlueArchiveApp.svelte  CreateArchiveDialog.svelte  types.ts
src/lib/components/apps/Blue-Code-App/: BlueCodeApp.svelte  DevServerPanel.svelte  TerminalPane.svelte  Toolbar.svelte  completions.ts  devServer.ts  editorFiles.ts  fileTree.ts  languageMap.ts
src/lib/components/apps/Blue-Docs-App/: RichEditor.svelte  SpreadsheetEditor.svelte  types.ts
src/lib/components/apps/Blue-Images-App/: BlueImagesApp.svelte
src/lib/components/apps/Blue-Installer/: BlueInstallerApp.svelte  installState.ts
src/lib/components/apps/Blue-Partition-Manager/: BluePartitionManager.svelte
src/lib/components/apps/Blue-Software/: BlueSoftwareApp.svelte
src/lib/components/apps/Blue-Translate/: translate.ts
src/lib/components/apps/Blue-Video/: Controls.svelte  playlist.ts
src/lib/components/apps/Blue-Web/: NewTabPage.svelte  tabs.ts
src/lib/components/settings/: PrintersSection.svelte
src/lib/stores/: dialog.ts  language.ts  windowManager.ts
src/lib/translations/: chinese.ts  dutch.ts  french.ts  polish.ts  portuguese.ts  russian.ts
src/lib/utils/: compositorBridge.ts  configStore.ts  notificationManager.ts  systemBridge.ts
src/utils/: configStore.ts  hkParser.ts  notificationManager.ts  systemBridge.ts
(+36 files in other folders)
