[workspace]
resolver = "2"
members = [
    "src-tauri",
    "compositor",
    "BEDM/bedm-daemon",
    "BEDM/bedm-greeter",
]

# ── Dependency overrides ────────────────────────────────────────────────────
# cookie 0.18.1 calls time::Parsable::parse() with ONE argument.
# time 0.3.37+ changed that signature to TWO arguments, breaking cookie.
# Pin time to the last version with the old 1-arg API so cargo resolver
# doesn't pull in the incompatible version via tauri's dependency chain.
[workspace.dependencies]
time = "=0.3.36"

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
strip     = true

[profile.dev]
opt-level = 1
