[package]
name = "blue-compositor"
version = "0.6.0"
edition = "2021"
description = "Blue Environment — Production Wayland Compositor (Smithay)"

[[bin]]
name = "blue-compositor"
path = "src/main.rs"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "82912edf", default-features = false, features = [
    "backend_winit",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_multi",
    "xwayland",
    "desktop",
    "wayland_frontend",
] }

wayland-protocols = { version = "0.31", features = ["server", "staging", "unstable"] }
wayland-server = "0.31"
calloop = { version = "0.14", features = ["executor"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.27", features = ["fs", "process", "signal"] }
libc = "0.2"
dirs = "5.0"
chrono = "0.4"
tempfile = "3"
drm = "0.12"

[patch.crates-io]
calloop = { git = "https://github.com/Smithay/calloop.git", tag = "v0.14.0" }
