[package]
name = "blue-environment"
version = "0.6.0"
description = "Blue Environment Desktop Shell"
authors = ["LegendaryOS Team <legendaryos.linux.system@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "blue-environment"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                          = { version = "2", features = ["protocol-asset", "image-png", "devtools"] }
tauri-plugin-fs                = "2"
tauri-plugin-shell             = "2"
tauri-plugin-dialog            = "2"
tauri-plugin-http              = "2"
tauri-plugin-notification      = "2"
tauri-plugin-process           = "2"
tauri-plugin-os                = "2"
tauri-plugin-global-shortcut   = "2"
tauri-plugin-clipboard-manager = "2"
serde                          = { version = "1", features = ["derive"] }
serde_json                     = "1"
tokio                          = { version = "1", features = ["full"] }
tracing                        = "0.1"
tracing-subscriber             = { version = "0.3", features = ["env-filter"] }
dirs                           = "5.0"
sha2                           = "0.10"
chrono                         = { version = "0.4", features = ["serde"] }
urlencoding                    = "2"
# Inherit workspace pin (time =0.3.36) — cookie 0.18 needs the 1-arg parse API
time                           = { workspace = true }
uuid                           = { version = "1", features = ["v4"] }
glob                           = "0.3"
base64                         = "0.21"
regex                          = "1"
reqwest                        = { version = "0.12", features = ["json"] }
once_cell                      = "1"
linicon                         = "2.3.0"
walkdir                        = "2"
libc                           = "0.2"
portable-pty                   = "0.8"
lazy_static                    = "1"
sysinfo                        = "0.30"

[features]
custom-protocol = ["tauri/custom-protocol"]
default         = ["custom-protocol"]

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
