[package]
name = "bedm-greeter"
version = "1.0.0"
edition = "2021"
description = "BEDM greeter — display manager UI"

[[bin]]
name = "bedm-greeter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "fs-all",
    "path-all",
    "process-command-api",
] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs        = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
