[package]
name = "blue-compositor"
version = "0.4.0"
edition = "2021"
description = "Blue Environment — Production Wayland Compositor"
license = "GPL-3.0"

[[bin]]
name = "blue-compositor"
path = "src/main.rs"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "82912edf", default-features = false, features = [
    "backend_winit",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "renderer_gl",
    "xwayland",
    "desktop",
    "wayland_frontend",
] }

# Do NOT add calloop as direct dep - use smithay::reexports::calloop
# This avoids the "multiple versions" conflict
wayland-server   = "0.31"
wayland-protocols = { version = "0.31", features = ["server"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
libc             = "0.2"
dirs             = "5.0"
chrono           = "0.4"
drm              = "0.12"
